# dpke-ntru-hps2048509-neon

./: .clang-format  .gitignore  CMakeLists.txt
.cache/clangd/index/: binary_inversion.c.B47E234BD35D17A6.idx  binary_inversion.h.1F2205283C6A8C56.idx  doctest.h.F944141BC94EC33C.idx  test_binary_inversion.cpp.2B1C3515324607A7.idx
cmake/: libcpucycles.cmake
src/: binary_inversion.c  binary_inversion.h  binary_poly.c  binary_poly.h  poly_inverse.c  poly_inverse.h  poly_mod.c  poly_mod.h
test/: benchmark.h  test_binary_inversion.cpp  test_generator.ipynb  test_mul_karatsuba_bench.c  test_mul_karatsuba_bench2.c  test_poly_bench.c  test_poly_mod_bench.c
